build(gradle): Remove unsage access warnings